[package]
name = "prompt"
version = "0.1.0"
authors = ["Lee Avital <lee.avital@datadoghq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dirs = "3.0.2"

